--- a/huawei/package.json
+++ b/huawei/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^19.2.2",
     "antd": "^5.28.0",
     "axios": "^1.13.1",
+    "lucide-react": "^0.552.0",
     "notyf": "^3.10.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -44,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18"
   }
 }
